--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1027,8 +1027,8 @@
             </details>
 </li>
 		<li class="box-num">
-<details><summary id="bx_16a"><span class="label label-warning">Deductions made on or after January 1, 2024</span> Boxes 16A – Employee's second CPP (CPP2) contributions</summary>	
-<p>For T4 slips filed on or after calendar year 2024, you will need to report the amount of CPP2 contributions you deducted from your employee in box 16A if box 10 shows their province or territory of employment is other than Quebec.</p>
+<details><summary id="bx_16a"><span class="label label-warning">Slips filed for calendar year 2024 and after</span> Boxes 16A – Employee's second CPP (CPP2) contributions</summary>	
+<p>For T4 slips filed for calendar year 2024 and after, report the amount of CPP2 contributions you deducted from your employee in box 16A if box 10 shows their province or territory of employment is other than Quebec.</p>
 <p>The CRA will provide more instructions by the end of 2023. </p>
 </details>	    	    
 	</li>
@@ -1050,9 +1050,9 @@
             </details>  
     </li>
 		<li class="box-num">         
- <details><summary id="bx_17a"><span class="label label-warning">Deductions made on or after January 1, 2024</span> Boxes 17A – Employee's second QPP (QPP2) contributions</summary>
-<p>For T4 slips filed on or after calendar year 2024, you will need to report the amount of QPP2 contributions you deducted from your employee in box 17A if box 10 shows their province of employment is Quebec.</p>
-<p>The CRA will provide more instructions by the end of 2023. </p>	
+ <details><summary id="bx_17a"><span class="label label-warning">Slips filed for calendar year 2024 and after</span> Boxes 17A – Employee's second QPP (QPP2) contributions</summary>
+<p>For T4 slips filed for calendar year 2024 and after, report the amount of QPP2 contributions you deducted from your employee in box 17A if box 10 shows their province of employment is Quebec.</p>
+<p>The CRA will provide more instructions by the end of 2023.</p>	
 </details>           
         </li>
 		<li class="box-num">    
