--- a/fhsa/v2/participating.html
+++ b/fhsa/v2/participating.html
@@ -225,7 +225,7 @@
 
     
         <h2 id="h-3">Carryforward up to $8,000</h2>
-<p>You can carry forward your unused FHSA participation room at the end of the year, up to a <strong>maximum of $8,000</strong>, to use in the following year. This amount is referred to as your FHSA carryforward. Any FHSA carryforward will be included in the calculation of your FHSA participation room for the year.</p>
+<p>You can carryforward up to a <strong>maximum of $8,000</strong> of unused FHSA participation room at the end of the year to use in the following year. This amount is referred to as your FHSA carryforward. Any FHSA carryforward will be included in the calculation of your FHSA participation room for the year.</p>
 
     
 
