--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -725,8 +725,8 @@
  </details> 
 </li>
 <li class="code-num">
- <details >  <summary>Code 046 – Charitable donations</summary> 
-  <p id="cd046">Report the amount you deducted from the recipients' earnings for donations to registered charities in Canada in the "Other information" area using code 046. </p>
+ <details >  <summary>Code 046 – Charitable donations  <span class="label label-warning">Jeremiah</span></summary> 
+  <p id="cd046">Report the payment you made as the qualified donee for charitable donations to a registered charity in Canada using code 046 </p>
 <p>Learn more on registered charities in Canada: <a href="https://apps.cra-arc.gc.ca/ebci/hacc/srch/pub/dsplyBscSrch?request_locale=en">List of Charities</a></p> 
  </details> 
 </li>
