--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -757,10 +757,13 @@
  </details> 
 </li>
 <li class="code-num">
- <details>  <summary>Code 106 – Death benefits</summary> 
-  <p id="cd106">Report the gross amount (includes the non-taxable portion) of any payment made (including a payment to a surviving spouse, <span class="nowrap">common-law</span> partner, heir, or estate) on or after the death of an employee to recognize the employee's service in an office or employment using code 106.</p> 
+ <details>  <summary>Code 106 – Death benefits <span class="label label-warning">Jeremiah</span></summary> 
+  <p id="cd106">Report the total amount of the death benefit you paid for the death of an employee to recognize the employee's service in an office or employment to a recipient, including the recipient's spouse, common-law partner, heir or estate using code 106.</p> 
+
+<p>Learn more on the tax treatment of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/death-benefit.html">Payments related to death benefits</a></p> 
  </details> 
 </li>
+
 <li class="code-num">
  <details>  <summary>Code 107 – Payments from a wage-loss replacement plan</summary> 
   <p id="cd107">Report benefits paid under a wage-loss replacement plan where you do not have to withhold&nbsp;Canada Pension Plan (CPP) contributions and/or Employment Insurance (EI) premiums using code 107.</p>
