--- a/fhsa/v2/transfers.html
+++ b/fhsa/v2/transfers.html
@@ -561,8 +561,8 @@
 
 </div>
         <h2 id="h-7">Making designated transfers from your FHSAs</h2>
-<p>If you contribute or transfer to your FHSAs more than your FHSA participation room for the year, you will have an excess FHSA amount. Generally, you have to pay a tax equal to 1% of the highest excess FHSA amount in the month, for each month that the excess remains in the account.</p>
-<p>When you have an excess FHSA amount, you will continue to pay the monthly 1% tax until the excess FHSA amount is eliminated.&nbsp;</p>
+<p>If you contribute or transfer to your FHSAs more than your FHSA participation room for the year, you will have an excess FHSA amount. Generally, you have to pay a tax equal to 1% of the highest excess FHSA amount in the month, 
+until the excess FHSA amount is eliminated.&nbsp;</p>
 <p>If you have an excess FHSA amount, one of the ways that you can reduce or eliminate your excess FHSA amount is to make a <a href="#designatedamounts" aria-controls="designatedamounts" class="wb-lbx" role="button">designated transfer&nbsp;<span class="far fa-question-circle"></span></a>. For more information, go to <a href="/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/what-happens-contribute-transfer-too-much.html">What happens if you contribute or transfer too much to <span class="nowrap">your FHSAs</span></a>.</p>
 
     
