--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -185,7 +185,7 @@
              <p>If you are a payer (such as an employer, a trustee, an estate executor/liquidator, an administrator, or a corporate director), you <strong>must </strong>issue a T4A slip if <strong>any </strong>of the following apply:</p>
          
 
- <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+ <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col">You deducted tax from any payment </li>
 <li class="cnjnctn-col">If the payment is <strong>not </strong>included on the <a href="#exception" aria-controls="centred-popup" class="wb-lbx" role="button">exceptions list&nbsp;<span class="far fa-question-circle"></span></a>, the total of all payments in the calendar year was more than <strong>$500 </strong>(under the CRA administrative policy) </li>
 </ul>
