--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -189,16 +189,18 @@
             <p>If you are an employer (resident <strong>or </strong>non-resident) and you paid your employees employment income, commissions, taxable allowances and benefits, fishing income, or any other remuneration, you <strong>must </strong>issue a T4 slip if <strong>any </strong>of the following apply:</p>
            <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"> You deducted CPP/QPP, EI, PPIP, or income tax from remuneration paid to your employee</li>
-               <li class="cnjnctn-col"> If the remuneration paid to your employee is <strong>not </strong>included on the <a href="#h-2-1">exception list</a>, the total of all remuneration paid in the calendar year was more than <strong>$500 </strong>(under the CRA administrative policy) </li>
+               <li class="cnjnctn-col"> If the remuneration paid to your employee is <strong>not </strong>included on the <a href="#exception" aria-controls="centred-popup" class="wb-lbx" role="button">exception list&nbsp;<span class="far fa-question-circle"></span></a>, the total of all remuneration paid in the calendar year was more than <strong>$500 </strong>(under the CRA administrative policy) </li>
             </ul>
 <details>  <summary >Exception list</summary>    
-           
+            <div id="ajax-exception">
             <dl class="dl-horizontal">
                <dt>Group term life insurance benefits</dt>
                <dd>
                   <p id="h-2-1">If you provide <strong>current or former </strong>employees with taxable <strong>group term life insurance </strong>benefits, you <strong>always </strong>have to issue a T4 slip, even if the total of all remuneration paid in the calendar year is $500 of less. </p>
                </dd>
-            </dl></details>
+            </dl>
+</div>
+</details>
             <h2 id="h-3">What to report</h2>
 <details>  <summary >What to report and not report on a T4</summary> 
           
@@ -1654,6 +1656,11 @@
             <div data-ajax-replace="#ajax-overpaid1"></div>
             </div>
             </section>
+
+<section id="exception" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Exceptions list</h2>
+	</header>	<div class="modal-body">		
+	<div data-ajax-replace="#ajax-exception"></div>
+	</div></section>
 
   	<section id="account" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">What is a payroll account</h2>
 	</header>	<div class="modal-body">		
