--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -300,7 +300,7 @@
 			  </div>
       
          </details>
-  <details> <summary>How to fill out "Other information" section</summary>
+  <details> <summary>How to fill out the "Other information" section</summary>
             <p>The "Other information" area at the bottom of the T4A slip has boxes for you to enter codes and amounts that relate to other types of payments, if they apply.</p>
 <p>The boxes are not pre-numbered as they are in the top part of the slip. Enter the codes that apply to the recipient. </p>
    <p class="pull-left mrgn-tp-md mrgn-rght-md">Example: </p>
