--- a/payroll/calculate/payment/index.html
+++ b/payroll/calculate/payment/index.html
@@ -160,7 +160,7 @@
                            <td>Type of remuneration </td>
                         </tr>
                       <tr>
-                           <td><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/death-benefits.html">Payments related to death benefits</a> </td>
+                           <td><a href="death-benefit.html">Payments related to death benefits</a> </td>
                            <td>Type of remuneration </td>
                         </tr>
                                               
@@ -213,7 +213,7 @@
                            <td>Type of remuneration </td>
                         </tr>
                      <tr>
-                           <td><a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/registered-disability-savings-plan-rdsp.html">Payments from a registered disability savings plan (RDSP)</a> </td>
+                           <td><a href="rdsp.html">Payments from a registered disability savings plan (RDSP)</a> </td>
                            <td>Type of remuneration </td>
                         </tr>
                         <tr>
@@ -265,7 +265,7 @@
                            <td>Type of remuneration </td>
                         </tr>
                         <tr>
-                           <td><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/wage-loss-replacement-plans.html">Payments from wage-loss replacement plans</a> </td>
+                           <td><a href="wlrp.html">Payments from wage-loss replacement plans</a> </td>
                            <td>Type of remuneration </td>
                         </tr>
                        
