--- a/payroll/calculate/payment/index.html
+++ b/payroll/calculate/payment/index.html
@@ -265,7 +265,7 @@
                            <td>Type of remuneration </td>
                         </tr>
                         <tr>
-                           <td><a href="wlrp.html">Payments from wage-loss replacement plans</a> </td>
+                           <td><a href="payments-wlrp.html">Payments from wage-loss replacement plans</a> </td>
                            <td>Type of remuneration </td>
                         </tr>
                        
