--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -743,7 +743,9 @@
 
 <li class="code-num">
  <details>  <summary>Code 107 – Payments from a wage-loss replacement plan</summary> 
-  <p id="cd107">Report benefits paid under a wage-loss replacement plan where you do not have to withhold&nbsp;Canada Pension Plan (CPP) contributions and/or Employment Insurance (EI) premiums using code 107.</p>
+  <p id="cd107">Report payments you made under a wage-loss replacement plan using code 107.</p>
+<p>Learn more on the tax treatment of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/payments-wlrp.html">Payments from wage-loss replacement plans</a></p> 
+
   </details> 
   </li>
 <li class="code-num">
