--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -742,7 +742,7 @@
 </li>
 
 <li class="code-num">
- <details>  <summary>Code 107 – Payments from a wage-loss replacement plan</summary> 
+ <details>  <summary>Code 107 – Payments from a wage-loss replacement plan <span class="label label-warning">Jeremiah</span></summary> 
   <p id="cd107">Report payments you made under a wage-loss replacement plan using code 107.</p>
 <p>Learn more on the tax treatment of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/payments-wlrp.html">Payments from wage-loss replacement plans</a></p> 
 
