--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -887,9 +887,10 @@
 </details>
  </li>
 <li class="code-num">
- <details>  <summary>Code 130 – Apprenticeship incentive grant, Apprenticeship Incentive Grant for Women or Apprenticeship completion grant</summary> 
-  <p  id="cd130">Report Apprenticeship Incentive Grants or Apprenticeship Incentive Grants for Women paid to registered apprentices who have successfully completed their first or <span class="nowrap">second-year/level</span> (or equivalent) of&nbsp;their apprenticeship program in a Red Seal trade using code 130.</p> 
-  <p>Report Apprenticeship Completion Grants paid to registered apprentices who have completed their apprenticeship training in a Red Seal trade.</p> 
+ <details>  <summary>Code 130 – Apprenticeship incentive grant, Apprenticeship Incentive Grant for Women or Apprenticeship completion grant <span class="label label-warning">Jeremiah</span></summary> 
+  <p  id="cd130">Report the amount of apprenticeship incentive grants or apprenticeship incentive grants for women you paid to the registered apprentice who has successfully completed their first or second-year level (or equivalent) of their apprenticeship program in a Red Seal trade using code 130.</p> 
+  <p>Also report the amount  full amount of apprenticeship completion grants you paid to the registered apprentice who has completed their apprenticeship training in a Red Seal trade.</p> 
+<p>Learn more from Service Canada: <a href="https://www.canada.ca/en/services/jobs/training/support-skilled-trades-apprentices/grants.html">Apprenticeship Grants</a> or call <strong>1-866-742-3644</strong> </p> 
  </details> 
 </li>
 <li class="code-num">
