--- a/subway/mghrtc/claimmaire.html
+++ b/subway/mghrtc/claimmaire.html
@@ -181,7 +181,7 @@ To claim on  paper return, complete and attach Schedule 12, Multigenerational Ho
 
 
 <h2 id="h-5">Impact on other credits and benefits</h2>
-<p>Expenses that may be included in an MHRTC claim <strong>must be reduced</strong> by any expenses that can reasonably be considered to have been reimbursed. This includes any form of assistance that you receive, or are entitled to receive, including any related rebates, such as those for GST/HST.
+<p>Expenses that may be included in an <strong>MHRTC claim must be reduced</strong> by any expenses that can reasonably be considered to have been reimbursed. This includes any form of assistance that you receive, or are entitled to receive, including any related rebates, such as those for GST/HST.
 </p>
 		 <p>You <strong>cannot</strong> claim the same expense for more than one credit. This means you cannot claim expenses that you included in your MHRTC claim for the medical expense tax credit or the home accessibility tax credit, or vice versa.</p>
 		 
