--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -889,7 +889,7 @@
 <li class="code-num">
  <details>  <summary>Code 130 – Apprenticeship incentive grant, Apprenticeship Incentive Grant for Women or Apprenticeship completion grant <span class="label label-warning">Jeremiah</span></summary> 
   <p  id="cd130">Report the amount of apprenticeship incentive grants or apprenticeship incentive grants for women you paid to the registered apprentice who has successfully completed their first or second-year level (or equivalent) of their apprenticeship program in a Red Seal trade using code 130.</p> 
-  <p>Also report the amount  full amount of apprenticeship completion grants you paid to the registered apprentice who has completed their apprenticeship training in a Red Seal trade.</p> 
+  <p>Also report the amount of apprenticeship completion grants you paid to the registered apprentice who has completed their apprenticeship training in a Red Seal trade.</p> 
 <p>Learn more from Service Canada: <a href="https://www.canada.ca/en/services/jobs/training/support-skilled-trades-apprentices/grants.html">Apprenticeship Grants</a> or call <strong>1-866-742-3644</strong> </p> 
  </details> 
 </li>
@@ -933,10 +933,11 @@
  </details> 
 </li>
 <li class="code-num">
- <details><summary>Code 136 – Parents of murdered or missing children/parents of young victims of crimes</summary> 
-  <p  id="cd136">Report amounts paid out to the beneficiary from the Canadian Benefit for Parents of Young Victims of Crime using code 136.</p>
-   <p>If the incident occurred before September 30, 2018, continue to use code 136 to report the amounts paid out. These amounts are still eligible under the former Parents of Murdered or Missing Children (PMMC) grant. </p>
-<p>Learn more: <a href="/en/employment-social-development/programs/ei/ei-list/ei-employers-parents-young-victims-crime.html">Canadian Benefit for Parents of Young Victims of Crime</a></p>
+ <details><summary>Code 136 – Parents of murdered or missing children/parents of young victims of crimes <span class="label label-warning">Jeremiah</span></summary> 
+  <p  id="cd136">Report the amount you paid to the beneficiary from the Canadian Benefit for Parents of Young Victims of Crime using code 136.</p>
+ 
+<p>Learn more from Employment and Social Development Canada: <a href="https://www.canada.ca/en/employment-social-development/programs/ei/ei-list/ei-employers-parents-young-victims-crime.html">Canadian Benefit for Parents of Young Victims of Crime</a></p>
+
  </details> 
 </li>
 <li class="code-num">
