--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -720,7 +720,7 @@
 </details> 
 </li>
 <li class="code-num">
- <details>  <summary>Code 105 – Scholarships, fellowships, bursaries, and artists' project grants  <span class="label label-success">Rewrite done</span></summary> 
+ <details>  <summary>Code 105 – Scholarships, fellowships, bursaries, and artists' project grants  <span class="label label-warning">Jeremiah</span></summary> 
   <p id="cd105">Report the full amount of the scholarships, fellowships, bursaries, and artists' project grants you paid to the recipient using code 105.</p> 
 
  <h4>Specific situations </h4>
@@ -728,6 +728,9 @@
 
 <dt>Postdoctoral fellowship income</dt>
 <dd><p>Report postdoctoral fellowship income you paid using code 105 <strong>and</strong> <a href="#cd210">code 210</a>. </p>
+<p>Learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/education.html">Educational assistance</a></p> </dd>
+<dt>Tuition assistance for adult basic education</dt>
+<dd><p>Report tuition assistance for adult basic education you paid using code 105 <strong>and</strong> <a href="#cd210">code 196</a>. </p>
 <p>Learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/education.html">Educational assistance</a></p> </dd>
 </dl>
 
@@ -1056,10 +1059,9 @@
  </details> 
  </li>
 <li class="code-num">
- <details>  <summary>Code 196 – Tuition assistance for adult basic education</summary> 
-  <p id="cd196">Report the amount of funding or other financial assistance you paid on behalf of the individual for tuition fees for the individual’s adult basic education training provided under a program established under the authority of the Department of Employment and Social Development Act (such as the Canada Job Grant program) using code 196. </p> 
-<p> This amount, which is eligible for the adult basic education tuition assistance deduction, is also included in code&nbsp;105.</p> 
-  <p>Generally, adult basic education is primary or secondary level education, or other forms of training where tuition fees paid for the training would not be eligible in calculating the tuition tax credit; for example, training provided by an educational institution that is not certified by Employment and Social Development Canada.</p> 
+ <details>  <summary>Code 196 – Tuition assistance for adult basic education <span class="label label-warning">Jeremiah</span></summary> 
+  <p id="cd196">Report the amount of funding or other financial assistance you paid on behalf of the individual for tuition fees for the individual’s adult basic education training provided under a program established under the authority of the Department of Employment and Social Development Act (such as the Canada Job Grant program) using code 196 <strong>and</strong> <a href="#cd105">code 105</a>. </p> 
+<p>Learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/education.html">Educational assistance</a></p>
  </details> 
 </li>
 <li class="code-num">
