--- a/fhsa/v2/withdrawals.html
+++ b/fhsa/v2/withdrawals.html
@@ -76,8 +76,12 @@
             <h2 id="h-1">Types of withdrawals</h2>
            <p>A withdrawal from an FHSA is not required to be included in your income if it is:</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col">a&nbsp;<a href="#qualwith" aria-controls="qualwith" class="wb-lbx" role="button">qualifying withdrawal&nbsp;<span class="far fa-question-circle"></span></a></li>
-<li class="cnjnctn-col">a&nbsp;<a href="#designatedamounts" aria-controls="designatedamounts" class="wb-lbx" role="button">designated amount&nbsp;<span class="far fa-question-circle"></span></a></li>
+<li class="cnjnctn-col">a&nbsp;<a href="#qualwith" aria-controls="qualwith" class="wb-lbx" role="button">A qualifying withdrawal&nbsp;<span class="far fa-question-circle"></span></a>
+<p>when you withdraw from your FHSA to buy a home and meet all the conditions for a qualifying withdrawal</p>
+</li>
+<li class="cnjnctn-col">a&nbsp;<a href="#designatedamounts" aria-controls="designatedamounts" class="wb-lbx" role="button">A designated amount&nbsp;<span class="far fa-question-circle"></span></a>
+<p>when you withdraw or transfer from your FHSA because you contributed or transferred too much and have an excess amount</p>
+</li>
 <li class="cnjnctn-col">an amount otherwise included in your income</li>
 </ul>
 <p>In all other cases, the amount withdrawn from your FHSA is a taxable withdrawal and must be included as income on your income tax and benefit return for the year the withdrawal is received.</p>
