--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -728,12 +728,12 @@
 
 <dt>Postdoctoral fellowship income</dt>
 <dd><p>Report postdoctoral fellowship income you paid using code 105 <strong>and</strong> <a href="#cd210">code 210</a>. </p>
-<p>Learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/education.html">Educational assistance</a></p> </dd>
+ </dd>
 <dt>Tuition assistance for adult basic education</dt>
 <dd><p>Report tuition assistance for adult basic education you paid using code 105 <strong>and</strong> <a href="#cd210">code 196</a>. </p>
-<p>Learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/education.html">Educational assistance</a></p> </dd>
+ </dd>
 </dl>
-
+<p>Learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/education.html">Educational assistance</a></p>
  </details> 
 </li>
 <li class="code-num">
