--- a/fhsa/v2/withdrawals.html
+++ b/fhsa/v2/withdrawals.html
@@ -76,7 +76,7 @@
             <h2 id="h-1">Types of withdrawals</h2>
            <p>A withdrawal from an FHSA is not required to be included in your income if it is:</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><h3></h3>A qualifying withdrawal</h3><span class="far fa-question-circle"></span></a>
+<li class="cnjnctn-col"><h3>A qualifying withdrawal</h3>
 <p>when you withdraw from your FHSA to buy a home and meet all the conditions for a qualifying withdrawal</p>
 </li>
 <li class="cnjnctn-col">a&nbsp;<a href="#designatedamounts" aria-controls="designatedamounts" class="wb-lbx" role="button">A designated amount&nbsp;<span class="far fa-question-circle"></span></a>
