--- a/fhsa/v2/withdrawals.html
+++ b/fhsa/v2/withdrawals.html
@@ -79,7 +79,7 @@
 <li class="cnjnctn-col"><h3>A qualifying withdrawal</h3>
 <p>when you withdraw from your FHSA to buy a home and meet all the conditions for a qualifying withdrawal</p>
 </li>
-<li class="cnjnctn-col">a&nbsp;<a href="#designatedamounts" aria-controls="designatedamounts" class="wb-lbx" role="button">A designated amount&nbsp;<span class="far fa-question-circle"></span></a>
+<li class="cnjnctn-col"><h3>A designated amount</h3>
 <p>when you withdraw or transfer from your FHSA because you contributed or transferred too much and have an excess amount</p>
 </li>
 <li class="cnjnctn-col">an amount otherwise included in your income</li>
