--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -897,9 +897,9 @@
  </details> 
 </li>
 <li class="code-num">
- <details>  <summary>Code 131 – Registered disability savings plan</summary> 
-  <p  id="cd131">Report payments paid to an RDSP plan beneficiary using code 131.</p> 
-<p>Learn more on the tax treatment of payments other than regular employment: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/registered-disability-savings-plan-rdsp/payments-rules/payments-rdsp-reported.html">RDSP payments</a></p>	 
+ <details>  <summary>Code 131 – Registered disability savings plan <span class="label label-warning">Jeremiah</span></summary> 
+  <p  id="cd131">Report payments you made under a registered disability savings plan (<abbr title="Registered disability savings plan">RDSP</abbr>) to a beneficiary using code 131.</p> 
+<p>Learn more on the tax treatment of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/rdsp.html">Payments from a registered disability savings plan (RDSP)</a></p>	 
  
 </details> 
  </li>
