--- a/fhsa/v2/withdrawals.html
+++ b/fhsa/v2/withdrawals.html
@@ -96,7 +96,128 @@
         <p>There is no minimum number of days that contributions or transfers to your FHSAs must stay in your FHSAs before you can use them for a qualifying withdrawal. You can withdraw amounts from your RRSP under the Home Buyers’ <span class="nowrap">Plan (HBP)</span> <strong>and</strong> make a qualifying withdrawal from your FHSA for the same qualifying home, as long as you meet all of the conditions at the time of each withdrawal. For information about the HBP conditions, go&nbsp;to&nbsp;<a href="/en/revenue-agency/services/tax/individuals/topics/rrsps-related-plans/what-home-buyers-plan/participate-home-buyers-plan.html">How to participate in the Home Buyers’ Plan (HBP)</a>.</p>
 
 		 <p>A qualifying withdrawal is a withdrawal from your FHSA where <strong>all</strong> of the following conditions are met:</p>
-<ul>
+
+		  <section class="gc-nav-section experimental provisional">
+            <h1 property="name" id="wb-cont">Who can apply</h1>
+            <section>
+               <h2 id="h-1">Eligibility criteria</h2>
+               <p class="lead">To be eligible for the [Name of X] [ABC], you must meet the following conditions:</p>
+               <section>
+                  <ul class="checkbox-lg checkbox-zebra">
+                     <li class="checkbox">
+                        <input type="checkbox" id="eg1" class="action-checkbox cb-dmm">
+                        <label for="eg1">You <strong>did not apply for or receive</strong> the CERB, the [YYY], the [ZZZ], or any EI benefits or QPIP benefits for the same period</label>
+                        <details class="mrgn-lft-lg">
+                           <summary>You can only get 1 emergency benefit at a time</summary>
+                           <p>You are only allowed to receive one type of federal emergency income support benefit in the same week: the CERB, the [YYY], the [ZZZ], the [WWW], or EI benefits.</p>
+                        </details>
+                     </li>
+                     <li class="checkbox">
+                        <input type="checkbox" id="eg2" class="action-checkbox cb-dmm">
+                        <label for="eg2">You were <strong>not eligible</strong> for EI benefits through Service Canada</label>
+                        <details class="mrgn-lft-lg">
+                           <summary>Find the right benefit for you</summary>
+                           <p>If you finished your CERB payments and still need financial support, find out which emergency support benefit is the best one for you.</p>
+                           <p>Go to: <a href="../0_archive-of-prev-content/cerb23-03-2020/cerb-cra/after.html">What to do after CERB</a></p>
+                        </details>
+                     </li>
+                     <li class="checkbox">
+                        <input type="checkbox" id="eg3" class="action-checkbox cb-dmm">
+                        <label for="eg3">You are not (or no longer) eligible for the CERB</label>
+                     </li>
+                     <li class="checkbox">
+                        <input type="checkbox" id="eg4" class="action-checkbox cb-dmm">
+                        <label for="eg4">You are a Canadian resident</label>
+                     </li>
+                     <li class="checkbox">
+                        <input type="checkbox" id="eg5" class="action-checkbox cb-dmm">
+                        <label for="eg5">You have a valid Social Insurance Number (SIN)</label>
+                     </li>
+                     <li class="checkbox">
+                        <input type="checkbox" id="eg6" class="action-checkbox cb-dmm">
+                        <label for="eg6">You are at least 15 years old</label>
+                     </li>
+                     <li class="checkbox">
+                        <input type="checkbox" id="eg7" class="action-checkbox cb-dmm">
+                        <label for="eg7">You earned at least $5,000 (before deductions) in the past 12 months or in 2019 from one or more of the following sources: </label>
+                        <ul class="std-blt lst-spcd">
+                           <li>
+                              <label for="eg7">employment income</label>
+                           </li>
+                           <li>
+                              <label for="eg7">self-employment income</label>
+                           </li>
+                           <li>
+                              <label for="eg7">provincial or federal benefit payments related to maternity or parental leave</label>
+                           </li>
+                        </ul>
+                        <details class="mrgn-lft-lg">
+                           <summary>What counts towards the $5,000?</summary>
+                           <ul class="fa-ul">
+                              <li><span class="fas fa-check text-success fa-li"></span>All employment or self-employment income, tips, non-eligible dividends, honoraria, and royalties</li>
+                              <li><span class="fas fa-times text-danger fa-li"></span>Amounts you may get from other emergency benefits (CERB, CESB, the [YYY], the [ZZZ] and the [WWW]) <strong>do not count</strong> as income</li>
+                           </ul>
+                        </details>
+                     </li>
+                     <li class="checkbox">
+                        <input type="checkbox" id="eg8" class="action-checkbox cb-dmm">
+                        <label for="eg8"><strong>One of the following: </strong></label>
+                        <ul class="std-blt lst-spcd">
+                           <li>
+                              <label for="eg8">[details]</label>
+                           </li>
+                           <li>
+                              <label for="eg8">[details]</label>
+                           </li>
+                        </ul>
+                     </li>
+                     <li class="checkbox">
+                        <input type="checkbox" id="eg9" class="action-checkbox cb-dmm">
+                        <label for="eg9">[details]</label>
+                     </li>
+                     <li class="checkbox">
+                        <input type="checkbox" id="eg10" class="action-checkbox cb-dmm">
+                        <label for="eg10">[details]</label>
+                     </li>
+                     <li class="checkbox">
+                        <input type="checkbox" id="eg11" class="action-checkbox cb-dmm">
+                        <label for="eg11">[details]</label>
+                     </li>
+                     <li class="checkbox">
+                        <input type="checkbox" id="eg12" class="action-checkbox cb-dmm">
+                        <label for="eg12"><strong>One of the following: </strong></label>
+                        <ul class="std-blt lst-spcd">
+                           <li>
+                              <label for="eg12">[details]</label>
+                           </li>
+                           <li>
+                              <label for="eg12">[details]</label>
+                           </li>
+                        </ul>
+                     </li>
+                     <li class="checkbox">
+                        <input type="checkbox" id="eg13" class="action-checkbox cb-dmm">
+                        <label for="eg13"><strong>One of the following: </strong></label>
+                        <ul class="std-blt lst-spcd">
+                           <li>
+                              <label for="eg13">[details]</label>
+                           </li>
+                           <li>
+                              <label for="eg13">[details]</label>
+                           </li>
+                        </ul>
+                     </li>
+                  </ul>
+                  <div class="alert alert-danger provisional" id="action-no-msg">
+                     <p>You need all of the above to be eligible for the [ABC].</p>
+                  </div>
+                  <div class="alert alert-success hidden provisional" id="action-msg1">
+                     <p>You are eligible for the [ABC]. You can get <strong class="lead">$[#]</strong> (before taxes) for each [#]-week period you apply for. </p>
+                  </div>
+               </section>
+               <div class="clearfix"></div>
+            </section>
+		 <ul>
 <li>you must fill out Form <a href="/en/revenue-agency/services/forms-publications/forms/rc725.html">RC725,&nbsp;Request to Make a Qualifying Withdrawal from your FHSA</a> and give it to your FHSA&nbsp;<a href="#issuer" aria-controls="issuer" class="wb-lbx" role="button">issuer&nbsp;<span class="far fa-question-circle"></span></a>.</li>
 <li>you must be a <a href="#firsttimehb" aria-controls="firsttimehb" class="wb-lbx" role="button">first-time home buyer&nbsp;<span class="far fa-question-circle"></span></a></li>
 <li>you must have a written agreement to buy or build a <a href="#qualhome" aria-controls="qualhome" class="wb-lbx" role="button">qualifying home&nbsp;<span class="far fa-question-circle"></span></a>&nbsp;with the <strong>acquisition or construction completion date</strong> of the qualifying home <strong>before <span class="nowrap">October 1</span></strong> of the year following the date of the withdrawal</li>
