--- a/fhsa/v2/withdrawals.html
+++ b/fhsa/v2/withdrawals.html
@@ -93,7 +93,7 @@
 	 
             <h2 id="h-2">Making qualifying withdrawals from your FHSAs</h2>
            <p>If you meet the qualifying withdrawal conditions, you can withdraw all of the property from your FHSAs tax-free. You can do this either in a single withdrawal or a series of withdrawals.&nbsp;</p>
-        <p>There is no minimum number of days that contributions or transfers to your FHSAs must stay in your FHSAs before you can use them for a qualifying withdrawal. You can withdraw amounts from your RRSP under the Home Buyers’ <span class="nowrap">Plan (HBP)</span> <strong>and</strong> make a qualifying withdrawal from your FHSA for the same qualifying home, as long as you meet all of the conditions at the time of each withdrawal. For information about the HBP conditions, go&nbsp;to&nbsp;<a href="/en/revenue-agency/services/tax/individuals/topics/rrsps-related-plans/what-home-buyers-plan/participate-home-buyers-plan.html">How to participate in the Home Buyers’ Plan (HBP)</a>.</p>
+        <p>There is no minimum number of days that contributions or transfers to your FHSAs must stay in your FHSAs before you can use them for a qualifying withdrawal. </p>
 
 		 <p>A qualifying withdrawal is a withdrawal from your FHSA where <strong>all</strong> of the following conditions are met:</p>
 
@@ -244,7 +244,7 @@
 <div class="alert alert-info">
 	<p>A &quot;first-time home buyer&quot; for the purpose of making a qualifying withdrawal is <strong>different</strong> than a &quot;first-time home buyer&quot; for the purpose of opening an FHSA.</p>
 <p>For purposes of a qualifying withdrawal, you will be considered to be a first-time home buyer if you did not, at any time in the current calendar year before the withdrawal (<strong>except the 30 days immediately before the withdrawal</strong>) or at any time in the preceding four calendar years, live in a qualifying home (or what would be a qualifying home if located in Canada) as your principal place of residence that you owned or jointly owned.</p>
-
+<p>You can withdraw amounts from your RRSP under the Home Buyers’ <span class="nowrap">Plan (HBP)</span> <strong>and</strong> make a qualifying withdrawal from your FHSA for the same qualifying home, as long as you meet all of the conditions at the time of each withdrawal. For information about the HBP conditions, go&nbsp;to&nbsp;<a href="/en/revenue-agency/services/tax/individuals/topics/rrsps-related-plans/what-home-buyers-plan/participate-home-buyers-plan.html">How to participate in the Home Buyers’ Plan (HBP)</a>.</p>
 </div>
 
 	
