--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -904,8 +904,9 @@
 </details> 
  </li>
 <li class="code-num">
-<details>  <summary>Code 132 – Wage earner protection program</summary> 
-  <p id="cd132">Report payments paid to workers due to employer bankruptcy or insolvency using code 132.</p> 
+<details>  <summary>Code 132 – Wage earner protection program <span class="label label-warning">Jeremiah</span></summary> 
+  <p id="cd132">Report payments you made for wages to individuals of an employer who is bankrupt, subject to a receivership, or other WEPP qualifying insolvency proceedings using code 132.</p> 
+<p>Learn more from Service Canada: <a href="https://www.canada.ca/en/employment-social-development/services/wage-earner-protection.html">Wage Earner Protection Program</a> or call <strong>1-866-683-6516</strong> 
  </details> 
  </li>
 <li class="code-num">
