--- a/payroll/calculate/payment/index.html
+++ b/payroll/calculate/payment/index.html
@@ -224,8 +224,12 @@
                            <td><a href="rca.html">Payments from retirement compensation arrangements (RCA)</a> </td>
                            <td>Type of remuneration </td>
                         </tr>
+ 		 <tr>
+                           <td><a href="subp.html">Payments from supplementary unemployment benefit plan (SUBP)</a> </td>
+                           <td>Type of remuneration </td>
+                        </tr>
  			 <tr>
-                           <td><a href="resp.html">Payments from a registered education savings plan (RESP)</a> </td>
+                           <td><a href="resp.html">Payments from registered education savings plan (RESP)</a> </td>
                            <td>Type of remuneration </td>
                         </tr>
 	   
