--- a/payroll/calculate/payment/template-payment.html
+++ b/payroll/calculate/payment/template-payment.html
@@ -136,13 +136,18 @@
 <li><a href="patronage.html" class="hidden-xs hidden-sm">Patronage payments</a>
 <a href="patronage.html#gc-document-nav" class="visible-xs visible-sm">Patronage payments</a></li>
 
-<li><a href="rdsp.html" class="hidden-xs hidden-sm">Payments from a registered disability savings plan (RDSP)</a>
-<a href="rdsp.html#gc-document-nav" class="visible-xs visible-sm">Payments from a registered disability savings plan (RDSP)</a></li>
-<li><a href="epsp.html" class="hidden-xs hidden-sm"> Payments from an employees profit sharing plan (EPSP)</a>
-<a href="epsp.html#gc-document-nav" class="visible-xs visible-sm">Payments from an employees profit sharing plan (EPSP)</a></li>
+<li><a href="epsp.html" class="hidden-xs hidden-sm"> Payments from employees profit sharing plan (EPSP)</a>
+<a href="epsp.html#gc-document-nav" class="visible-xs visible-sm">Payments from employees profit sharing plan (EPSP)</a></li>
+
+<li><a href="rdsp.html" class="hidden-xs hidden-sm">Payments from registered disability savings plan (RDSP)</a>
+<a href="rdsp.html#gc-document-nav" class="visible-xs visible-sm">Payments from registered disability savings plan (RDSP)</a></li>
 
 <li><a href="rca.html" class="hidden-xs hidden-sm"> Payments from retirement compensation arrangements (RCA)</a>
 <a href="rca.html#gc-document-nav" class="visible-xs visible-sm">Payments from retirement compensation arrangements (RCA)</a></li>
+
+<li><a href="subp.html" class="hidden-xs hidden-sm">Payments from supplementary unemployment benefit plan (SUBP)</a>
+<a href="subp.html#gc-document-nav" class="visible-xs visible-sm">Payments from supplementary unemployment benefit plan (SUBP)</a></li>
+
 
 <li><a href="payments-wlrp.html" class="hidden-xs hidden-sm"> Payments from wage-loss replacement plans</a>
 <a href=" payments-wlrp.html#gc-document-nav" class="visible-xs visible-sm">Payments from wage-loss replacement plans</a></li>
