--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -974,12 +974,13 @@
 
 <li class="code-num">
  <details>  <summary>Code 150 – Labour Adjustment Benefits Act and Appropriation Acts</summary> 
-  <p  id="cd150">Report payments under the Labour Adjustment Benefits Act or a benefit payable under the Appropriation Acts to compensate for loss of office or employment, such as in the textile and <span class="nowrap">leather-tanning</span> industries using code 150.</p> 
+  <p  id="cd150">Report payments you made under the Labour Adjustment Benefits Act or a benefit payable under the Appropriation Acts to compensate for loss of office or employment, such as in the textile and <span class="nowrap">leather-tanning</span> industries using code 150.</p> 
  </details> 
  </li>
 <li class="code-num">
- <details>  <summary>Code 152 – SUBP qualified under the Income Tax Act</summary> 
-  <p  id="cd152">Report payments received under a registered SUBP that is registered under the Income Tax Act (not including maternity/parental top ups which are included on a T4&nbsp;slip) using code 152.</p> 
+ <details>  <summary>Code 152 – SUBP qualified under the Income Tax Act <span class="label label-warning">Jeremiah</span></summary> 
+  <p  id="cd152">Report payments you made under a supplementary unemployment benefit plan (<abbr title="Supplementary unemployment benefit plan">SUBP</abbr>) using code 152.</p> 
+<p>Learn more on the tax treatment of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/subp.html">Payments from supplementary unemployment benefit plan (SUBP)</a></p>      
  </details> 
  </li>
 <li class="code-num">
