--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -973,8 +973,10 @@
 </li>
 
 <li class="code-num">
- <details>  <summary>Code 150 – Labour Adjustment Benefits Act and Appropriation Acts</summary> 
-  <p  id="cd150">Report payments you made under the Labour Adjustment Benefits Act or a benefit payable under the Appropriation Acts to compensate for loss of office or employment, such as in the textile and <span class="nowrap">leather-tanning</span> industries using code 150.</p> 
+ <details>  <summary>Code 150 – Labour Adjustment Benefits Act and Appropriation Acts <span class="label label-warning">Jeremiah</span></summary> 
+  <p  id="cd150">Report payments you made under the Labour Adjustment Benefits Act or a benefit payable under the Appropriation Acts to compensate for loss of office or employment, such as in the textile and leather-tanning industries using code 150.</p> 
+
+<p>Learn more: <a href="">Where could I redirect Jeremiah?</a></p> 
  </details> 
  </li>
 <li class="code-num">
