--- a/fhsa/v2/withdrawals.html
+++ b/fhsa/v2/withdrawals.html
@@ -245,10 +245,13 @@
                     
                    
                   <div class="alert alert-danger provisional" id="action-no-msg">
-                     <p>You need all of the above to be eligible for the [ABC].</p>
+                    <h3>You need all of the above to make a qualifying withdrawal</h3>
+			  <p>If you do not meet all of the conditions above, the amount withdrawn from your FHSA may be a taxable withdrawal. You must include the amount you withdraw as income on your income tax and benefit return for the year the withdrawal is received.</p>
                   </div>
                   <div class="alert alert-success hidden provisional" id="action-msg1">
-                     <p>You are eligible for the [ABC]. You can get <strong class="lead">$[#]</strong> (before taxes) for each [#]-week period you apply for. </p>
+                    <p>Based on your selections above:</p>
+			  <h3>You meet the conditions for a qualifying withdrawal</h3>
+			  <p>Since you meet all of the conditions above, the amount withdrawn from your FHSA would be a qualifying withdrawal. You do not need to include the amount you withdraw as income on your income tax and benefit return. </p>
                   </div>
                </section>
                <div class="clearfix"></div>
