--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -987,8 +987,8 @@
  </li>
 <li class="code-num">
  <details>  <summary>Code 154 – Cash award or prize from payer</summary> 
-  <p  id="cd154">Report an award or prize paid directly from a manufacturer to the employee of a dealer or other sales organization using code 154.</p>
-<p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/gifts.html">Gifts, awards, and long-service awards</a></p> 
+  <p  id="cd154">Report the amount for the gift, award or prize if you are the manufacturer and you made the payment to the dealer's employee using code 154.</p>
+<p>Learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/gifts.html#manu2">Gifts, awards, and long-service awards</a></p> 
  </details> 
 </li>
 <li class="code-num">
