--- a/fhsa/v2/withdrawals.html
+++ b/fhsa/v2/withdrawals.html
@@ -221,8 +221,28 @@
                         <label for="eg2">You must have a written agreement to buy or build a qualifying home with the <strong>acquisition or construction completion date</strong> of the qualifying home <strong>before October 1</strong> of the year following the date of the withdrawal</label>
                         <details class="mrgn-lft-lg">
                            <summary>What counts as a qualifying home</summary>
-                           <p>content</p>
-                           <p>Go to: <a href="../0_archive-of-prev-content/cerb23-03-2020/cerb-cra/after.html">What to do after CERB</a></p>
+				<p>A housing unit located in Canada. This includes existing homes and those being constructed.</p>
+                           <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<li class="cnjnctn-col"><h3>Qualify</h3>
+ <ul class="fa-ul">
+	<li><span class="fas fa-check text-success fa-li"></span>Single-family homes</li>
+	 	<li><span class="fas fa-check text-success fa-li"></span>Semi-detached homes</li>
+	 	<li><span class="fas fa-check text-success fa-li"></span>Townhouses</li>
+	 	 	<li><span class="fas fa-check text-success fa-li"></span>Mobile homes</li>
+	 	 	<li><span class="fas fa-check text-success fa-li"></span>Condominium units</li>
+	 	<li><span class="fas fa-check text-success fa-li"></span>Apartments in duplexes, triplexes, fourplexes, or apartment buildings</li>
+	 	<li><span class="fas fa-check text-success fa-li"></span>A share in a co-operative housing corporation that entitles you to own and gives you an equity interest in a housing unit</li>
+
+
+
+
+</li>
+<li class="cnjnctn-col"><h3>Does not qualify</h3>
+<li><span class="fas fa-times text-danger fa-li fa-lg"></span>A share that only provides you with a right to tenancy in the housing unit</li>
+</li>
+
+</ul>
+                           
                         </details>
                      </li>
                      <li class="checkbox">
