--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -611,6 +611,12 @@
 <dd><p>Report the total amount of the board and lodging using code 028. </p>
 <p>If you paid lodging and housing at special work sites, report the total amount of the board and lodging benefit using code 028 <strong>and</strong> <a href="#cd124">code 124</a> for the tax-exempt board, lodging and housing at the special work sites </p>
 </dd>
+
+<dt>Gifts and awards provided by a person other than the employer </dt>
+<dd><p>Report the taxable amount if you provided gifts and awards and you are a person other than the employer using code 028 <strong>and</strong> if income tax was deduced <a href="#bx022">box 022</a>. </p>
+<p>Learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/gifts.html#manu2">Gifts, awards, and long-service awards</a></p>
+</dd>
+
 </dl>
 
 </details> 
