--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -614,6 +614,7 @@
 
 <dt>Gifts and awards provided by a person other than the employer </dt>
 <dd><p>Report the taxable amount if you provided gifts and awards and you are a person other than the employer using code 028 <strong>and</strong> if income tax was deduced <a href="#bx022">box 022</a>. </p>
+<p><strong>Do not</strong> report if you are the manufacturer and you made the payment to the dealer's employee using code 028, use <a href="#cd154">code 154</a>.<p>
 <p>Learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/gifts.html#manu2">Gifts, awards, and long-service awards</a></p>
 </dd>
 
@@ -992,8 +993,9 @@
  </details> 
  </li>
 <li class="code-num">
- <details>  <summary>Code 154 – Cash award or prize from payer</summary> 
+ <details>  <summary>Code 154 – Cash award or prize from payer <span class="label label-warning">Jeremiah</span></summary> 
   <p  id="cd154">Report the amount for the gift, award or prize if you are the manufacturer and you made the payment to the dealer's employee using code 154.</p>
+<p><strong>Do not</strong> report if you are not the manufacturer using code 154, use <a href="#cd028">code 028</a>.<p>
 <p>Learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/gifts.html#manu2">Gifts, awards, and long-service awards</a></p> 
  </details> 
 </li>
