--- a/fhsa/v2/withdrawals.html
+++ b/fhsa/v2/withdrawals.html
@@ -234,8 +234,8 @@ at any time in the preceding four calendar years
                         <details class="mrgn-lft-lg">
                            <summary>What counts as a qualifying home</summary>
 				<p>A housing unit located in Canada. This includes existing homes and those being constructed.</p>
-                           <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><h3>Qualify</h3>
+                           
+<li class="cnjnctn-col"><h3>Qualifies</h3>
  <ul class="fa-ul">
 	<li><span class="fas fa-check text-success fa-li"></span>Single-family homes</li>
 	 	<li><span class="fas fa-check text-success fa-li"></span>Semi-detached homes</li>
@@ -249,7 +249,7 @@ at any time in the preceding four calendar years
 
 
 </li>
-<li class="cnjnctn-col"><h3>Does not qualify</h3>
+<h3>Does not qualify</h3>
 <li><span class="fas fa-times text-danger fa-li fa-lg"></span>A share that only provides you with a right to tenancy in the housing unit</li>
 </li>
 
