--- a/fhsa/v2/withdrawals.html
+++ b/fhsa/v2/withdrawals.html
@@ -239,7 +239,7 @@
                            <summary>What counts as a qualifying home</summary>
 				<p>A housing unit located in Canada. This includes existing homes and those being constructed.</p>
                            
-<li class="cnjnctn-col"><h3>Qualifies</h3>
+<h3>Qualifies</h3>
  <ul class="fa-ul">
 	<li><span class="fas fa-check text-success fa-li"></span>Single-family homes</li>
 	 	<li><span class="fas fa-check text-success fa-li"></span>Semi-detached homes</li>
@@ -253,6 +253,8 @@
 
 
 </li>
+ </ul>
+				<ul class="fa-ul">
 <h3>Does not qualify</h3>
 <li><span class="fas fa-times text-danger fa-li fa-lg"></span>A share that only provides you with a right to tenancy in the housing unit</li>
 </li>
