--- a/fhsa/v2/withdrawals.html
+++ b/fhsa/v2/withdrawals.html
@@ -222,7 +222,7 @@
 
                                     </li>
                                     <li class="cnjnctn-col">
-                                       in the previous 4 calendar years </li></ul>
+                                       the previous 4 calendar years </li></ul>
 	 
  </ul>
 				
