--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -1000,9 +1000,11 @@
  </details> 
 </li>
 <li class="code-num">
- <details>  <summary>Code 156 – Bankruptcy settlement</summary> 
-  <p  id="cd156">Report amounts paid by a trustee in bankruptcy to employees of a bankrupt corporation in settlement of claims filed for wages that the bankrupt employer did not pay using code 156.</p> 
- </details> 
+ <details>  <summary>Code 156 – Bankruptcy settlement <span class="label label-warning">Jeremiah</span></summary> 
+  <p  id="cd156">Report payments you made as a trustee in bankruptcy to employees of a bankrupt corporation in settlement of claims filed for wages that the bankrupt employer did not pay using code 156.</p> 
+<p>Learn more: <a href="">Where could I redirect Jeremiah?</a></p>  
+
+</details> 
  </li>
 <li class="code-num">
 <details>  <summary>Code 158 – Lump-sum payments that you cannot transfer that are not reported elsewhere <span class="label label-success">Rewrite done</span></summary> 
@@ -1077,23 +1079,22 @@
  </details> 
 </li>
 <li class="code-num">
-<details>  <summary>Code 200 – Provincial/Territorial COVID-19 financial assistance payments</summary> 
+<details>  <summary>Code 200 – Provincial/Territorial COVID-19 financial assistance payments <span class="label label-warning">Jeremiah</span></summary> 
 <p id="cd200">Report amounts that were paid as financial assistance by a provincial or territorial government to support individuals affected by COVID-19 and that are taxable under subparagraphs 56(1)(r)(i) or (iv), or clause 56(1)(r)(iv.1)(E) of the Income Tax Act, minus any amounts repaid within the same tax year using code 200.</p>
- </details> 
+<p>Learn more: <a href="">Where could I redirect Jeremiah?</a></p>  
+</details> 
 </li>
 <li class="code-num">
-<details>  <summary>Code 201 – Repayment of COVID-19 financial assistance</summary> 
+<details>  <summary>Code 201 – Repayment of COVID-19 financial assistance <span class="label label-warning">Jeremiah</span></summary> 
    <p id="cd201">Report the amount of federal, provincial or territorial COVID-19 financial assistance payments that were repaid in the year in respect of an overpayment of federal, provincial or territorial COVID-19 financial assistance payments received in a prior year using code 201. </p>
+<p>Learn more: <a href="">Where could I redirect Jeremiah?</a></p> 
  </details> 
 </li>
 <li class="code-num">
- <details > <summary>Code 205 – One-time payment for older seniors</summary> 
- <p id="cd205">Report $500 for the supplementary OAS payment made in 2021  using code 205.</p>
- <p>For 2021 and later tax years, new income code 205 has been introduced to report the one-time supplementary OAS payment of $500 paid to older seniors, residing in Canada or abroad, if they:</p>
-<ul><li>Were born on or before June 30, 1947, and</li>
-<li>Were eligible for the Old Age Security (OAS) pension in June 2021</li></ul>
-<p>This supplementary payment is to be reported on the T4A slip, and <strong>not</strong> the T4A(OAS).</p> 
-<p>Learn more: <a href="/en/services/benefits/publicpensions/cpp/old-age-security/one-time-payment-older-seniors.html"> One-time payment for older seniors</a></p>
+ <details > <summary>Code 205 – One-time payment for older seniors <span class="label label-warning">Jeremiah</span></summary> 
+ <p id="cd205">Report the one-time payment made to older seniors using code 205.</p>
+<p><strong>Do not</strong> report this payment using the T4A(OAS) slip.</p> 
+<p>Learn more from Employment and Social Development Canada: <a href="https://www.canada.ca/en/services/benefits/publicpensions/cpp/old-age-security/one-time-payment-older-seniors.html"> One-time payment for older seniors</a></p>
    </details> 
 </li>
 <li class="code-num">
