--- a/payroll/file/t4summary.html
+++ b/payroll/file/t4summary.html
@@ -263,7 +263,7 @@
  </details> 
 
 <details><summary id="bx_16a"><span class="label label-warning">Slips filed for calendar year 2024 and after</span> Boxes 16A – Employee's second CPP (CPP2) contributions</summary>	
-<p>For T4 summaries filed for calendar year 2024 and after, add the amounts in box 16A of all T4 slips. You will need to report the total on line 16A.</p>
+<p>For T4 summaries filed for calendar year 2024 and after, add the amounts in box 16A of all T4 slips. Report the total on line 16A.</p>
 <p>The CRA will provide more instructions by the end of 2023. </p>
 </details>	
 
